Changed the way the URL to the schema file is created to work cross-platform.
git-svn-id: svn+ssh://svn.code.sf.net/p/opennode2/src/trunk@560 a46bb6aa-65bc-42c6-9d02-ca0d7e7f78c4